# domjudge-scoreboard-to-score

./: .flake8  .isort.cfg  .mypy.ini  .pydocstyle.ini  Makefile  README.md  main.py  pyproject.toml
