[tool.poetry]
name = "domjudge-scoreboard-to-score"
version = "0.1.0"
description = ""
authors = ["Arthur Chang <arthurc0102@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
flake8-commas = "^2.1.0"
flake8-quotes = "^3.3.1"
black = "^21.11b1"
isort = "^5.10.1"
pydocstyle = "^6.1.1"
mypy = "^0.910"
ipython = "^7.30.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
